# wb

./: LICENSE.txt  README.md  docker-compose.yml
client/: CMakeLists.txt
client/include/: config.h  key-client.h  macro.h  media-client.h  wb_loader.h
client/src/: CMakeLists.txt
client/src/client_shell/: CMakeLists.txt  main_shell.c
client/src/client_tester/: CMakeLists.txt  main_tester.c
client/src/nacl-aes/: CMakeLists.txt
client/src/utils/: CMakeLists.txt  context.c  key-client.c  media-client.c  wb_loader.c
client/src/vlc_lib/: CMakeLists.txt  lib_interface.c
key-server/: .gitignore  files-cipher.py  files.json  files.json.template  key_decode.py  server.py
nginx/: Dockerfile  nginx.conf  site.conf
solve_whitebox_pyqbdi/: .gitignore  README.md  client.py  functionP.py  get_key.c  mycamellia.py  server.py  solver.py  whitebox_camellia_solver.py
whitebox_builder/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
whitebox_builder/docker_script/: runner.py
whitebox_builder/include/: VB.h  libwblib.h
whitebox_builder/src/: AES_constructor.c  CMakeLists.txt  test.c
whitebox_builder/src/nacl-aes/: CMakeLists.txt
whitebox_builder/wb_gen/: CamelliaWriter.py  VMGenerator.py  check_test.py  encodedGenerator.py  functionP.py  genAES.py  genWhitebox.py  mycamellia.py  writer.py
